# sherlock

./: .gitignore  pyproject.toml  sherlock.ipynb
sherlock/: HMM_PSP_interactive.py
