[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = "Tool for automatic detection of period-spacing patterns in gravity mode pulsators"
authors = ["Joey Mombarg <jmombarg@irap.omp.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"
h5py = "^3.4.0"
matplotlib = "^3.4.3"
pandas = "^2.0.0"
scipy = "^1.9.3"
jupyter = "^1.0.0"
ipympl = "^0.9.3"
ipython = "^8.17.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
